# flowdash-backend

./: .env.example  .gitignore  AGENTS.md  CI_PIPELINE.md  Dockerfile  Makefile  N8N_API_CACHING.md  NOTIFICATION_INTEGRATION.md  PLAN.md  QUICKSTART.md  README.md  TEST_SUMMARY.md  applications_plans.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run  run.sh  setup.sh  test_setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 58bf1d9670e3_add_enabled_field_to_n8n_instances.py  5a432502476d_initial_migration.py  add_is_tester_index.py  add_plans_table_and_seed_data.py  add_subscription_models.py
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: admin.py  devices.py  error_workflows.py  instances.py  subscriptions.py  webhooks.py  workflows.py
app/cli/: __init__.py  admin.py
app/core/: cache.py  config.py  database.py  firebase.py  firebase_service.py  middleware.py  rate_limit_middleware.py  rate_limiter.py  redis_cache.py  security.py
app/models/: __init__.py  audit_log.py  fcm_notification.py  n8n_instance.py  plan.py  quota.py  subscription.py  subscription_history.py  user.py
app/notifier/: webhook_handler.py
app/services/: analytics_service.py  device_service.py  error_workflow_service.py  fcm_service.py  instance_service.py  quota_service.py  subscription_service.py  workflow_service.py
docs/: ADMIN_CLI.md  ERROR_WEBHOOK_SETUP.md
scripts/: README.md  build-and-push.sh
tests/: conftest.py  test_api_endpoints.py  test_caching.py  test_database_integration.py  test_firebase_integration.py  test_instance_service.py  test_rate_limiting.py  test_redis_integration.py  test_webhook_handler.py
